--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtspeech-opensource-src-5.9.0-beta.tar.xz: 5ad40700993bfdcd127aa104569a5bb39aad0e06
+  qtscxml-opensource-src-5.9.0-beta4.tar.xz: 3b49b878390a8fea430f3c18f71e59f902a7862a
