Update to 5.9.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-opensource-src-5.9.0-rc.tar.xz: e7bec16b7abe54d42cc69f202c543732a5f2a34e
+  qtscxml-opensource-src-5.9.0-rc2.tar.xz: af481be8c934c2c9e691d57e1eadeed3482fd765
