--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-opensource-src-5.9.0-rc2.tar.xz: af481be8c934c2c9e691d57e1eadeed3482fd765
+  qtscxml-opensource-src-5.9.0.tar.xz: 3ad5abd3c503a4a7ac88bf2c50aab6caa70efc87
