--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-opensource-src-5.9.2.tar.xz: 1ef5f5cc7a1b5eecfd0663339e4feb7e95a9e720
+  qtscxml-everywhere-src-5.10.0-beta.tar.xz: d276d964c51b3bae314df83e7663d13080b0d832
