--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.10.0-beta.tar.xz: d276d964c51b3bae314df83e7663d13080b0d832
+  qtscxml-everywhere-src-5.10.0.tar.xz: d8277e4fe8ef998954ece87e8bd1ae99f1e923d2
