--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.10.0.tar.xz: c2fa701b9abc8da99214005058feb3c33d76b5f0
+  qtscxml-everywhere-src-5.10.0-beta4.tar.xz: 1ac63232bda451addc10c66a66de53e17fc4592f
