Update to 5.10.0-rc1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtscxml-everywhere-src-5.10.0-beta4.tar.xz: 1ac63232bda451addc10c66a66de53e17fc4592f
+  qtscxml-everywhere-src-5.10.0-rc1.tar.xz: 6430e12c3fc2578d1bd77613dd09e47bdbcb4ecd
