Update to 5.10.0-rc3

--- a/.abf.yml
+++ b/.abf.yml
@@ -2,3 +2,4 @@ sources:
   qtscxml-everywhere-src-5.10.0-beta4.tar.xz: 1ac63232bda451addc10c66a66de53e17fc4592f
   qtscxml-everywhere-src-5.10.0-rc1.tar.xz: 6430e12c3fc2578d1bd77613dd09e47bdbcb4ecd
   qtscxml-everywhere-src-5.10.0-rc2.tar.xz: 564a5b560bc7a7e66141188bca2d4c1170563403
+  qtscxml-everywhere-src-5.10.0-rc3.tar.xz: 6305b195653d9e8b1b70dde2c4751be21116e7ca
