--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.10.0-rc3.tar.xz: 6305b195653d9e8b1b70dde2c4751be21116e7ca
+  qtscxml-everywhere-src-5.10.0.tar.xz: 8b9d90dda2624fd7ef12a90981af98366f33c87e
