Update to 5.11.0-beta3

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.10.1.tar.xz: 443d26f6464924c3be6bb6b0d8a6bf52a5efb409
+  qtscxml-everywhere-src-5.11.0-beta3.tar.xz: c1c2ac38d5dd6cfb177a26a6b4b279322cddf8f0
