Update to 5.11.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.11.0-beta4.tar.xz: 3237c5fbe63737788f3ce950e7058bfe1bba696f
+  qtscxml-everywhere-src-5.11.0-rc.tar.xz: 8d432ef5b8fca80ee66044e6199f5ec1a9e2fed5
