Update to 5.11.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.11.0-rc.tar.xz: 8d432ef5b8fca80ee66044e6199f5ec1a9e2fed5
+  qtscxml-everywhere-src-5.11.0-rc2.tar.xz: 3c459601cdaa1473e8d097a4409361702d07781c
