--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.11.0-rc2.tar.xz: 3c459601cdaa1473e8d097a4409361702d07781c
+  qtscxml-everywhere-src-5.11.0.tar.xz: e684cdff41203c779da9ca3733abe98be41c770c
