--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.12.3.tar.xz: 623085b02c79276671e2c9b052e51bf0ec0aa8eb
+  qtscxml-everywhere-src-5.13.0-rc3.tar.xz: c3f6332e8a311ff46c34f899193034949521d456
