--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtscxml-everywhere-src-5.13.0-rc3.tar.xz: c3f6332e8a311ff46c34f899193034949521d456
+  qtscxml-everywhere-src-5.13.0.tar.xz: 88ddcde875b3b1a8248850631fd1344a2c80aed0
