--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.13.1.tar.xz: 7b25276a9e6a76f4f4fa26f477b13c686f432ef8
+  qtscxml-everywhere-src-5.14.0-beta1.tar.xz: 2090dd3d2d4cd9d7c82d10157ccabde1fb56733e
