--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtscxml-everywhere-src-5.14.0-beta1.tar.xz: 2090dd3d2d4cd9d7c82d10157ccabde1fb56733e
+  qtscxml-everywhere-src-5.14.0-beta2.tar.xz: a4e9f930431f9a5838891a48e4e9b598d444e176
