--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
 sources:
   qtscxml-everywhere-src-5.14.0-beta1.tar.xz: 2090dd3d2d4cd9d7c82d10157ccabde1fb56733e
   qtscxml-everywhere-src-5.14.0-beta2.tar.xz: a4e9f930431f9a5838891a48e4e9b598d444e176
+  qtscxml-everywhere-src-5.14.0-beta3.tar.xz: 2fe91a9c8bc8d434a3dcde33a39e62d26c5b93ba
