Update to 5.15.0-beta1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtscxml-everywhere-src-5.15.0-alpha.tar.xz: b767b476fad7d988bdfb31b3fe52d1a507309696
+  qtscxml-everywhere-src-5.15.0-beta1.tar.xz: b48c2d5046cb6cc3dc6cd1d7bd64f17764127506
