Update to 5.15.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.15.0-beta4.tar.xz: 3b76311d037f7991888c7a650d2c1807f5b8bf01
+  qtscxml-everywhere-src-5.15.0-rc.tar.xz: 2879628bc19048a966916599abeb53206af57df4
