Update to 5.15.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.15.0-rc.tar.xz: 2879628bc19048a966916599abeb53206af57df4
+  qtscxml-everywhere-src-5.15.0-rc2.tar.xz: f107edbeee4d24f5c4ad614c1cf5eb7cbe2837db
