--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtscxml-everywhere-src-5.15.0-rc2.tar.xz: f107edbeee4d24f5c4ad614c1cf5eb7cbe2837db
+  qtscxml-everywhere-src-5.15.0.tar.xz: 5f1c2c0db57e5af5bb49a3170fcc556972b7b63e
